--- a/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/combo-box/components/combo-box/combo-box.component.html
@@ -1,5 +1,5 @@
 <div class="mona-combo-box" [ngClass]="{'mona-disabled': disabled}" [attr.tabindex]="disabled ? -1 : 0" #dropdownWrapper>
-    <input monaTextBox class="mona-input-inner" [ngModel]="comboBoxValue" (ngModelChange)="comboBoxValue$.next($event)" (keydown)="onKeydown($event)">
+    <input monaTextBox class="mona-input-inner" [ngModel]="comboBoxValue()" (ngModelChange)="comboBoxValue$.next($event)" (keydown)="onKeydown($event)">
     <span class="mona-input-clear-icon" *ngIf="showClearButton && valuePopupListItem" (click)="clearValue($event)">
         <fa-icon [icon]="clearIcon"></fa-icon>
     </span>
