--- a/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/modules/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -11,7 +11,7 @@
     <span class="mona-input-clear-icon" *ngIf="showClearButton && valuePopupListItem" (click)="clearValue($event)">
         <fa-icon [icon]="clearIcon"></fa-icon>
     </span>
-    <button monaButton class="mona-input-button" (click)="open()">
+    <button monaButton class="mona-input-button">
         <fa-icon [icon]="dropdownIcon"></fa-icon>
     </button>
 </div>
