--- a/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.html
+++ b/projects/mona-ui/src/lib/grid/components/grid-cell/grid-cell.component.html
@@ -12,16 +12,16 @@
 
 <ng-template #cellEditTemplate>
     <form [formGroup]="editForm" class="mona-grid-cell-edit-form">
-        <ng-container *ngIf="column.filterType==='string'">
+        <ng-container *ngIf="column.dataType==='string'">
             <mona-text-box [formControlName]="column.field"></mona-text-box>
         </ng-container>
-        <ng-container *ngIf="column.filterType==='number'">
+        <ng-container *ngIf="column.dataType==='number'">
             <mona-numeric-text-box [formControlName]="column.field" [decimals]="3"></mona-numeric-text-box>
         </ng-container>
-        <ng-container *ngIf="column.filterType==='date'">
+        <ng-container *ngIf="column.dataType==='date'">
             <mona-date-picker [formControlName]="column.field"></mona-date-picker>
         </ng-container>
-        <ng-container *ngIf="column.filterType==='boolean'">
+        <ng-container *ngIf="column.dataType==='boolean'">
             <input type="checkbox" [formControlName]="column.field" monaCheckBox />
         </ng-container>
     </form>
