Initial min max options for time picker

--- a/projects/mona-ui/src/lib/date-inputs/modules/time-picker/components/time-picker/time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/time-picker/components/time-picker/time-picker.component.html
@@ -10,5 +10,7 @@
 </div>
 
 <ng-template #timePopupTemplate>
-    <mona-time-selector [ngModel]="value" (ngModelChange)="onTimeSelectorValueChange($event)" [hourFormat]="hourFormat" [showSeconds]="showSeconds"></mona-time-selector>
+    <mona-time-selector [ngModel]="value" (ngModelChange)="onTimeSelectorValueChange($event)"
+                        [max]="max" [min]="min"
+                        [hourFormat]="hourFormat" [showSeconds]="showSeconds"></mona-time-selector>
 </ng-template>
