feat: Fieldset module

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -441,6 +441,15 @@
                                                [min]="calendarMinValue"
                                                   [max]="calendarMaxValue"
                                                style="width: 300px;"></mona-calendar>
+
+                                <mona-fieldset legend="Quote" style="width: 375px;">
+                                    <ng-template monaFieldsetLegendTemplate>
+                                        <span style="color: var(--mona-primary-light);">Quote of the Day</span>
+                                    </ng-template>
+                                    <div style="padding: 10px; text-align: justify;">
+                                        貴方は夜空を覆っている雲の狭間から輝いている一つの星のように私の人生を照らしてくれているよ。
+                                    </div>
+                                </mona-fieldset>
                             </div>
                         </div>
                     </ng-template>
