--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -32,7 +32,7 @@
             </mona-tree-view>
         </mona-splitter-pane>
         <mona-splitter-pane>
-            <mona-tab-strip [keepTabContent]="false" [closable]="false" (tabClose)="onTabStripTabClose($event)">
+            <mona-tab-strip [keepTabContent]="true" [closable]="false" (tabClose)="onTabStripTabClose($event)">
                 <mona-tab [title]="'Grid Tab'">
                     <ng-template monaTabContentTemplate>
                         <div style="padding: 40px;">
@@ -501,16 +501,18 @@
                             <mona-splitter style="height: 100%;" orientation="vertical">
                                 <mona-splitter-pane [collapsible]="true">
                                     <div style="width: 100%; height: 100%; padding: 20px;">
-                                        <button monaButton>Open Dialog</button>
+                                        <mona-scroll-view [data]="scrollViewData" [width]="960" [height]="540" style="border: 1px solid var(--mona-border-color);">
+                                            <ng-template let-item>
+                                                <img [src]="item" style="width: 100%; height: 100%;" />
+                                            </ng-template>
+                                        </mona-scroll-view>
                                     </div>
                                 </mona-splitter-pane>
                                 <mona-splitter-pane [collapsible]="true">
-
                                     <mona-splitter orientation="horizontal">
                                         <mona-splitter-pane [collapsible]="true">
                                             <div style="width: 100%; height: 100%; padding: 20px;">
-<!--                                                <mona-calendar [(ngModel)]="calendarValue"-->
-<!--                                                               style="width: 300px;"></mona-calendar>-->
+
                                             </div>
                                         </mona-splitter-pane>
                                         <mona-splitter-pane [collapsible]="true">
